Related: fdo#73608 don't crash on missing table styles

(cherry picked from commit 5fd7382651d64f77e8ad1d9a5c053f52f3641f9f)

Conflicts:
	writerfilter/source/dmapper/DomainMapperTableHandler.cxx

Change-Id: I340b43b7afc4c5c4d6dc8e4ed182279240306540

Resolves: fdo#73608 bail out on loop in style sheet hierarchy

Change-Id: I03975d1ce8eaceceb4d5c263eb11c1521bcd57eb
(cherry picked from commit be18133e84120625734a09380594ee89b23c4322)
Reviewed-on: https://gerrit.libreoffice.org/11680
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>